[tool.poetry]
name = "caesar_cipher"
version = "0.1.0"
description = ""
authors = ["Arthur Lozano <chillout885@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
